--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Meeting Transcript Reminder",
-  "version": "1.1",
-  "description": "Reminds users to enable meeting transcripts on meet.google.com",
+  "version": "1.2",
+  "description": "Automatically enable meeting transcripts on meet.google.com",
   "permissions": [],
   "background": {
     "service_worker": "background.js"
